# distributed-systems

./: .gitignore  CMakeLists.txt  IO.c  IOMisc.h  Log.c  Main.c  Makefile  ipc.c  log.c  main.c
pa1/: IO.c  IOMisc.h  Log.c  Main.c  ipc.c  ipc.h  pa1.h
pa2/: IO.c  IOMisc.h  Log.c  Makefile  README.md  banking.c  ipc.c  pa23.c
pa2_mag/: CMakeLists.txt  Utils.h  common.h  ipc.c  lab6  pa2.c
pa3/: .gitignore  IO.c  IOMisc.h  IPCWrapper.h  Makefile  README.md  Utils.c  Utils.h  banking.c  ipc.c  pa23.c
pa4/: Log.c  Makefile  README.md  Utils.c  Utils.h  ipc.c  lab4  pa4.c
pa5/: Makefile  Utils.h  lab5  pa5.c
pa6/: CMakeLists.txt  Log.c  Makefile  Utils.c  ipc.c  lab6  pa2.c
